# TinyComp

./: CMakeLists.txt  README.md
src/: main.c  tinyComp.c  tinyComp.h
